--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,58 @@
-# Environments
-.env 
+# Ambiente de desenvolvimento
+.env
 .venv
-venv
+venv/
+
+# Diretórios e arquivos gerados pelo Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Logs
+*.log
+
+# Arquivos temporários
+*.tmp
+*.temp
+
+# Configurações do IDE
+.vscode/
+.idea/
+
+# Bibliotecas instaladas via pip
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+pip-wheel-metadata/
+*.egg-info/
+
+# Arquivos de banco de dados
+*.sqlite3
+
+# Arquivos de compilação
+*.so
+*.dylib
+*.dll
+
+# Arquivos de cobertura de testes
+htmlcov/
+.tox/
+.nox/
+coverage.*
+.cache
+pytest_cache/
+
+# Arquivos de depuração
+*.log
+*.debug
+
+# Outros arquivos e diretórios comuns
+*.bak
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+*.ipynb_checkpoints
